welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:4: error: '=' expected but ';' found.
  for (i<-1 to nums.length-1) 
^indexOfValue:6: error: ']' expected but '(' found.
    valeur = nums[ len(nums) -1]
                      ^