welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  var valeur = 0
  var position=-1
  for (i<-1 to nums.length-1) 
  {
    valeur = nums[ len(nums) -1]
    if (nums(i-1)==valeur) 
    {
      position=i-1
    }
  }
  return position
}